--- a/package.json
+++ b/package.json
@@ -4,11 +4,16 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "electron ."
+    "start": "electron .",
+    "package": "electron-forge package"
   },
   "author": "Felix Rieseberg <felix@felixrieseberg.com>",
   "license": "ISC",
   "devDependencies": {
+    "@electron-forge/cli": "^6.0.0-beta.22",
     "electron": "2.0.5"
+  },
+  "config": {
+    "forge": {}
   }
 }
